[tool.poetry]
name = "pycoho"
version = "0.1.0"
description = "A Python wrapper for the UK Companies House API"
authors = ["Armand Rego <armand@weirdsheeplabs.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/regoawt/pycoho"
keywords = ['wrapper', 'uk', 'companies', 'house', 'api']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
packages = [
    { include = "pycoho"},
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
